Fixed modal overflow problem.

--- a/assets/linker/styles/modal.css
+++ b/assets/linker/styles/modal.css
@@ -1,3 +1,7 @@
+.modal-dialog {
+    width: 650px;
+}
+
 .modal-body {
     padding: 15px;
 }
@@ -38,6 +42,12 @@
 .modal-footer {
     margin-top: 0;
     padding: 8px;
+}
+
+.modal-body {
+    max-height: 500px;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .modalBacklog .modal-dialog,
